Fixed top gap on homepage

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,13 @@
 // Specific CSS for your home-page
 .home-page-body{
 	background-image: asset-url('bannerlet-01.png');
-	height: 100vh;
-	background-size: cover;
-	background-position: center;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  width: 100vw;
 }
 
 .home-page-text {
